# fluxmail

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  zensical.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: index.md  installation.md  requirements.txt
docs/css/: extra.css
docs/getting-started/: cli_usage.md  configuration.md  org-config.md  usage.md
docs/reference/: api.md
docs/superpowers/plans/: 2026-03-17-plan1-foundation-tests.md  2026-03-17-plan2-new-feature-modules.md  2026-03-17-plan3-config-advanced.md  2026-05-11-missing-features.md  2026-05-12-developer-features.md
docs/superpowers/specs/: 2026-05-11-missing-features-design.md  2026-05-12-developer-features-design.md
src/autoemail/: __init__.py  __main__.py  _version.py  autoemail.py  autoemail_cli.py  testing.py  utils.py
src/fluxmail/: __init__.py  __main__.py  _transport.py  _version.py  bulk.py  fluxmail.py  fluxmail_cli.py  template.py  testing.py  utils.py
src/fluxmail/backends/: __init__.py  django.py
tests/: conftest.py  test_autoemail.py  test_backend_django.py  test_bulk.py  test_cli.py  test_fluxmail.py  test_template.py  test_transport.py  test_utils.py
