[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autoemail" 
description = "A Python library for Email Automation. This allows you to create and send emails using either SMTP or Outlook. It supports both Windows and Linux platforms (with Outlook available only on Windows)"
authors = [
    {name = "Vertex AI Automations", email = "info@vertexaiautomations.com"}
]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
requires-python = ">=3.8"
keywords = ["email", "automation", "smtp", "outlook", "domain"]

dynamic = ["version", "dependencies"]
license = 'MIT'
license-files = ['LICENSE']

[project.urls]
homepage = "https://www.vertexaiautomations.com"
documentation = "https://vertex-ai-automations.github.io/autoemail"
repository = 'https://github.com/vertex-ai-automations/autoemail'
issues = "https://github.com/vertex-ai-automations/autoemail/issues/new"

[project.scripts]
autoemail = "autoemail.autoemail_cli:main"

# version and requirements are dynamically pulled from setup.py. We may enable this in future if setup.py gets deprecated
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# Auto generate _version.py with the corresponding git tag
version_file = "src/autoemail/_version.py"


