[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmail"
description = "A Python library for Email Automation. FluxMail allows you to create and send emails using either SMTP or Outlook. It supports both Windows and Linux platforms (with Outlook available only on Windows)"
authors = [
    {name = "Vertex AI Automations", email = "info@vertexaiautomations.com"}
]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
requires-python = ">=3.8"
keywords = ["email", "automation", "smtp", "outlook", "domain", "fluxmail"]

dynamic = ["version", "dependencies"]
license = 'MIT'
license-files = ['LICENSE']

[project.urls]
homepage = "https://www.vertexaiautomations.com"
documentation = "https://vertex-ai-automations.github.io/fluxmail"
repository = 'https://github.com/vertex-ai-automations/fluxmail'
issues = "https://github.com/vertex-ai-automations/fluxmail/issues/new"

[project.scripts]
fluxmail = "fluxmail.fluxmail_cli:main"

# version and requirements are dynamically pulled from setup.py. We may enable this in future if setup.py gets deprecated
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# Auto generate _version.py with the corresponding git tag
version_file = "src/fluxmail/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]


