[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmail"
description = "A Python library for Email Automation. FluxMail allows you to create and send emails using either SMTP or Outlook. It supports both Windows and Linux platforms (with Outlook available only on Windows)"
authors = [
    {name = "Vertex AI Automations", email = "info@vertexaiautomations.com"}
]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Email",
    "Topic :: Internet",
    "Typing :: Typed",
]
requires-python = ">=3.9"
keywords = ["email", "automation", "smtp", "outlook", "domain", "fluxmail"]

dynamic = ["version", "dependencies"]
license = {text = "MIT"}

[project.urls]
homepage = "https://www.vertexaiautomations.com"
documentation = "https://vertex-ai-automations.github.io/fluxmail"
repository = 'https://github.com/vertex-ai-automations/fluxmail'
issues = "https://github.com/vertex-ai-automations/fluxmail/issues/new"

[project.scripts]
fluxmail = "fluxmail.fluxmail_cli:main"

[project.optional-dependencies]
django = ["Django>=3.2"]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
    "Django>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
version_file = "src/fluxmail/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30



[tool.mypy]
ignore_missing_imports = true